# TrackEval

./: .bumpversion.toml  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: install.yml  unittest.yml
maintainers/: README.md
script-tsting/: all_quick.py  davis.py  mot17.py  mots.py
scripts/: comparison_plots.py  run_bdd.py  run_burst.py  run_burst_ow.py  run_davis.py  run_headtracking_challenge.py  run_kitti.py  run_kitti_mots.py  run_mot_challenge.py  run_mots_challenge.py  run_person_path_22.py  run_rob_mots.py  run_tao.py  run_tao_ow.py  run_youtube_vis.py
tests/: conftest.py  test_metrics.py
tests/cli/: test_run_kitti.py
tests/metrics/hota/: test_global_info.py
trackeval/: __init__.py  _timing.py  eval.py  exception.py  plotting.py  types.py  utils.py
trackeval/baselines/: baseline_utils.py  non_overlap.py  stp.py  thresholder.py  vizualize.py
trackeval/cli/: modify_with_cmd_line.py  run_kitti.py
trackeval/datasets/: __init__.py  _base_dataset.py  bdd100k.py  burst.py  burst_ow.py  davis.py  head_tracking_challenge.py  kitti_2d_box.py  kitti_mots.py  mot_challenge_2d_box.py  mots_challenge.py  person_path_22.py  rob_mots.py  rob_mots_classmap.py  run_rob_mots.py  tao.py  tao_ow.py  youtube_vis.py
trackeval/datasets/burst_helpers/: burst_base.py  burst_ow_base.py  convert_burst_format_to_tao_format.py  format_converter.py
trackeval/metrics/: __init__.py  _base_metric.py  clear.py  count.py  hota.py  identity.py  ideucl.py  j_and_f.py  track_map.py  vace.py
trackeval/metrics/hota/: global_info.py  hota.py
