[project]
name = "trackeval"
version = "0.1.0"
description = "Different tracking evaluation metrics including HOTA metrics."
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "matplotlib>=3.6.3",
    "numpy==1.19.5",
    "opencv-python>=4.5.4.60",
    "pillow>=11.3.0",
    "pycocotools>=2.0.10",
    "scikit-image>=0.19.3",
    "scipy>=1.10.1",
    "tabulate>=0.9.0",
]

[project.urls]
Repository = "https://github.com/JonathonLuiten/TrackEval"
Issues = "https://github.com/JonathonLuiten/TrackEval/issues"

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]
license = { file = "LICENSE" }

authors = [
    { name = "Jonathon Luiten", email = "jonoluiten@gmail.com" },
    { name = "Arne Hoffhues"}
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]

[project.scripts]
trackeval-kitti = "trackeval.cli.run_kitti:main"

