[project]
name = "trackeval"
version = "1.0.0"
description = "Different tracking evaluation metrics including HOTA metrics."
readme = "README.md"
requires-python = ">=3.8,<3.12"
dependencies = [
    "matplotlib>=3.6.3; python_version<='3.10'",
    "matplotlib>=3.10.5; python_version>='3.11'",
    "numpy>=1.19.5,<2.0; python_version<='3.10'",
    "numpy>=2.3.2; python_version>='3.11'",
    "opencv-python>=4.5.4.60; python_version<='3.10'",
    "opencv-python>=4.12.0.88; python_version>='3.11'",
    "pillow>=10.4.0; python_version<='3.10'",
    "pillow>=11.3.0; python_version>='3.11'",
    "pycocotools>=2.0.7; python_version<='3.10'",
    "pycocotools>=2.0.10; python_version>='3.11'",
    "scikit-image>=0.19.3; python_version<='3.10'",
    "scikit-image>=0.25.0; python_version>='3.11'", 
    "scipy>=1.10.1; python_version<='3.10'",
    "scipy>=1.16.1; python_version>='3.11'",
    "tabulate>=0.9.0",
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]
authors = [
    { name = "Jonathon Luiten", email = "jonoluiten@gmail.com" }
]

maintainers = [
    { name = "Arne Hoffhues", email = "unknown.email@unknownhost.com"},
    { name = "Jonathon Luiten", email = "jonoluiten@gmail.com" }
]


[project.urls]
Repository = "https://github.com/kovalp/TrackEval"
Issues = "https://github.com/kovalp/TrackEval/issues"

[dependency-groups]
dev = [
    "bump-my-version>=1.2.1",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.12.9",
]

[project.scripts]
trackeval-kitti = "trackeval.cli.run_kitti:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["trackeval*"]
exclude = ["data*"]
