[project]
name = "trackeval"
version = "1.0.0"
description = "Different tracking evaluation metrics including HOTA metrics."
readme = "README.md"
requires-python = ">=3.8,<3.12"
dependencies = [
    "matplotlib>=3.7.5;        python_version=='3.8'",
    "numpy>=1.24.4,<2.0;       python_version=='3.8'",
    "opencv-python>=4.11.0.86; python_version=='3.8'",
    "pillow>=10.4.0;           python_version=='3.8'",
    "pycocotools>=2.0.7;       python_version=='3.8'",
    "scikit-image>=0.21.0;     python_version=='3.8'",
    "scipy>=1.10.1;            python_version=='3.8'",

    "matplotlib>=3.9.4;        python_version=='3.9'",
    "numpy>=1.26.4,<2.0;       python_version=='3.9'",
    "opencv-python>=4.11.0.86; python_version=='3.9'",
    "pillow>=11.3.0;           python_version=='3.9'",
    "pycocotools>=2.0.10;      python_version=='3.9'",
    "scikit-image>=0.24.0;     python_version=='3.9'",
    "scipy>=1.13.1;            python_version=='3.9'",

    "matplotlib>=3.10.5;       python_version=='3.10'",
    "numpy>=2.2.6;             python_version=='3.10'",
    "opencv-python>=4.11.0.86; python_version=='3.10'",
    "pillow>=11.3.0;           python_version=='3.10'",
    "pycocotools>=2.0.10;       python_version=='3.10'",
    "scikit-image>=0.25.2;     python_version=='3.10'",
    "scipy>=1.15.3;            python_version=='3.10'",

    "matplotlib>=3.10.5;       python_version=='3.11'",
    "numpy>=2.3.0;             python_version=='3.11'",
    "opencv-python>=4.11.0.86; python_version=='3.11'",
    "pillow>=11.3.0;           python_version=='3.11'",
    "pycocotools>=2.0.10;      python_version=='3.11'",
    "scikit-image>=0.25.0;     python_version=='3.11'",
    "scipy>=1.16.1;            python_version=='3.11'",

    "tabulate>=0.9.0",
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]
authors = [
    { name = "Jonathon Luiten", email = "jonoluiten@gmail.com" }
]

maintainers = [
    { name = "Arne Hoffhues", email = "unknown.email@unknownhost.com"},
    { name = "Jonathon Luiten", email = "jonoluiten@gmail.com" }
]


[project.urls]
Repository = "https://github.com/kovalp/TrackEval"
Issues = "https://github.com/kovalp/TrackEval/issues"

[dependency-groups]
dev = [
    "bump-my-version>=1.2.1; python_version=='3.8'",
    "pytest>=8.3.5;          python_version=='3.8'",
    "pytest-cov>=5.0.0;      python_version=='3.8'",
    "ruff>=0.12.9;           python_version=='3.8'",

    "bump-my-version>=1.2.1; python_version=='3.9'",
    "pytest>=8.4.1;          python_version=='3.9'",
    "pytest-cov>=6.2.1;      python_version=='3.9'",
    "ruff>=0.12.9;           python_version=='3.9'",

    "bump-my-version>=1.2.1; python_version=='3.10'",
    "pytest>=8.4.1;          python_version=='3.10'",
    "pytest-cov>=6.2.1;      python_version=='3.10'",
    "ruff>=0.12.9;           python_version=='3.10'",

    "bump-my-version>=1.2.1; python_version=='3.11'",
    "pytest>=8.3.5;          python_version=='3.11'",
    "pytest-cov>=5.0.0;      python_version=='3.11'",
    "ruff>=0.12.9;           python_version=='3.11'",
]

[project.scripts]
trackeval-kitti = "trackeval.cli.run_kitti:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["trackeval*"]
exclude = ["data*"]
